--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -133,7 +133,7 @@ body {
 	width: 100%;
 	overflow-y: auto;
 	scrollbar-gutter: stable;
-	padding: 10px;
+	padding: 5px;
 	font-size: 100%;
 }
 
@@ -142,6 +142,4 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 100%;
-	height: 100%;
 }
